Dashboard/dashboard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: dashboard
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: dashboard
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: rollouts-dashboard
    app.openshift.io/runtime-version: "1.10"
  name: dashboard

spec:
  port:
    targetPort: 3100-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: dashboard
    weight: 100
  wildcardPolicy: None
